# agentforge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
skills/ai-ml/: prompt-engineering.md
skills/architecture/: microservices.md  system-design.md
skills/coding/: api-design.md  clean-code.md  code-review.md  debugging.md  performance-optimization.md  refactoring.md  security-audit.md  test-writing.md
skills/devops/: ci-cd-pipeline.md  docker-optimization.md
skills/workflows/: documentation.md  git-workflow.md
src/agentforge/: __init__.py  __main__.py
src/agentforge/agents/: __init__.py  aider.py  base.py  claude_code.py  copilot.py  cursor.py  hermes.py
src/agentforge/cli/: __init__.py  _utils.py  config_cmd.py  info.py  init_cmd.py  install.py  list_cmd.py  main.py  search.py  share.py  uninstall.py  update.py
src/agentforge/core/: __init__.py  config.py  installer.py  registry.py  resolver.py  skill.py
src/agentforge/marketplace/: __init__.py  cache.py  client.py  models.py
src/agentforge/utils/: __init__.py  display.py  markdown.py  paths.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_installer.py  test_markdown.py  test_registry.py  test_resolver.py  test_skill.py
tests/fixtures/: invalid_skill.md  sample_skill.md
