[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "The definitive skill manager for AI agents — discover, install, and manage agent skills from the command line."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "zzj1965186613" },
]
keywords = ["ai", "agent", "skills", "cli", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-cov",
]

[project.scripts]
agentforge = "agentforge.cli.main:cli"

[project.urls]
Homepage = "https://github.com/zzj1965186613/agentforge"
Repository = "https://github.com/zzj1965186613/agentforge"
Issues = "https://github.com/zzj1965186613/agentforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]
force-include = { "skills" = "agentforge/skills" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
